--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: scroll_shadow_container
-description: Dynamically appearing shadows on top or bottom of a scrollable area when end is reached 
-version: 2.0.1
+description: Dynamically appearing shadows on top or bottom of a scrollable area
+version: 2.1.0
 repository: https://github.com/nuc134r/scroll_shadow_container
 
 environment:
